Modificaciones para el motor de 1000kv

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,10 +22,10 @@ build_flags =
  	-lBPNN
 
 ; PLEASE UNCOMMENT THIS IF YOU USE WIFI NATIVE
-; lib_deps = 
-; 	; WiFi
-	; me-no-dev/ESP Async WebServer@^1.2.3
-	; me-no-dev/AsyncTCP@^1.1.1
+lib_deps = 
+	
+ https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/me-no-dev/AsyncTCP.git
 
 
 [platformio]
